tests/solidity/bad/propaliased.sol
contract Test {
    function foo() public view {}
    function echidna_test() public view {}
}
